# dma_baremetal

./: .gitmodules  CMakeLists.txt  arm-none-eabi-gcc.cmake
inc/: bsp.h  buffer.h  dma.h  gpio.h  rcc.h  usart.h
src/: buffer.c  dma.c  gpio.c  main.c  old_main.c  rcc.c  usart.c
